# myshell

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  config.json
include/: commands.h  config_search.h  monitor.h  pipe.h  utils.h
monitor/: INSTALL.md  Makefile  README.md
monitor/include/: expose_metrics.h  metrics.h
monitor/src/: expose_metrics.c  main.c  metrics.c
src/: commands.c  config_search.c  main.c  monitor.c  pipe.c  utils.c
test/: test_commands.c  test_monitor.c
